<resources>
    <string name="app_name">STInv</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">menu_slideshow</string>
    <string name="menu_gallery">menu_gallery</string>
    <string name="menu_slideshow">menu_slideshow</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_pedidos">Pedidos</string>


    <string name="Version">Version 1.0</string>
    <string name="TituloClientes">Clientes</string>
    <string name="TituloArticulos">Articulos</string>
    <string name="Codigo">Código</string>
    <string name="DescripcionArt">Descripción del artículo</string>
    <string name="TituloNuevoArticulos">Nuevo Artículo</string>
    <string name="UnidadMedida">"U.M."</string>
    <string name="PrecioArticulo">"Precio"</string>
    <string name="ResidenciaActual">Residencia actual</string>
    <string name="Proveedor">Proveedor</string>

</resources>