<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.AltaArticuloActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minWidth="25.0px"
        android:minHeight="25.0px">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minWidth="25.0px"
            android:minHeight="25.0px">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/linearLayoutTituloAltaEmpleado"
                android:background="@color/colorAccent"
                android:layout_width="fill_parent"
                android:layout_height="70.0dip"
                android:layout_marginBottom="0.0dip"
                android:minWidth="25.0px"
                android:minHeight="25.0px">

                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="25.0sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/background_light"
                    android:gravity="center"
                    android:id="@+id/txtTituloPasajeros"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TituloNuevoArticulos" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvwCodigoArtidulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Codigo"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editCodigoArticulo"
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:inputType="text" />

                        <ImageButton
                            android:id="@+id/btnCodigoBarra"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/ic_launcher_foreground"
                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/DescripcionArt"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/idedit_apellidos"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="text"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/PrecioArticulo"
                                android:textColor="@color/colorAccent"
                                android:textSize="15sp" />
                            <EditText
                                android:id="@+id/editCantidad"
                                android:layout_width="150dp"
                                android:layout_height="50dp"
                                android:inputType="numberDecimal" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/UnidadMedida"
                                android:textColor="@color/colorAccent"
                                android:textSize="15sp" />

                            <Spinner
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/PrecioArticulo"
                                android:textColor="@color/colorAccent"
                                android:textSize="15sp" />
                            <EditText
                                android:id="@+id/editPrecio"
                                android:layout_width="150dp"
                                android:layout_height="50dp"
                                android:inputType="numberDecimal" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ResidenciaActual"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinlugar"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                    </Spinner>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Proveedor"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edit_correo"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="text" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <Button
                        android:id="@+id/idbtnRegistrarPasajero"
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:text="Registrar Articulo"
                        android:textColor="@color/colorBlanco"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>